# parakeet-stt

./: LICENSE  README.md  benchmark.py  benchmark.sh  benchmark_pt.py  pyproject.toml  transcribe.py
nano_parakeet/: __init__.py  __main__.py  _loader.py  audio.py  model.py
tests/: test_decode_general.py  test_end_to_end_sample.py  test_zero_duration_blank.py
