[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-parakeet"
version = "0.1.0"
description = "Pure-PyTorch Parakeet TDT inference — no NeMo required"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "soundfile",
    "sentencepiece",
    "huggingface-hub",
]

[project.scripts]
nano-parakeet = "nano_parakeet.__main__:main"

[tool.setuptools.package-data]
nano_parakeet = ["tokenizer.model"]
