[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-parakeet"
version = "0.1.0"
description = "Pure-PyTorch Parakeet TDT inference — no NeMo required"
readme = "README.md"
authors = [{ name = "Andrés Marafioti", email = "andimarafioti@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["speech", "asr", "transcription", "parakeet", "pytorch", "conformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "torch",
    "numpy",
    "soundfile",
    "sentencepiece",
    "huggingface-hub",
]

[project.urls]
Homepage = "https://github.com/andimarafioti/parakeet-stt"
Repository = "https://github.com/andimarafioti/parakeet-stt"
Issues = "https://github.com/andimarafioti/parakeet-stt/issues"

[project.scripts]
nano-parakeet = "nano_parakeet.__main__:main"

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
nano_parakeet = ["tokenizer.model"]
